--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "git": "^0.1.5",
+    "heroku": "^7.22.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "xmlhttprequest": "^1.8.0"
